Update test. Add documentation.